--- a/res/layout/albums_frag.xml
+++ b/res/layout/albums_frag.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <include layout="@layout/list_content" />
+    <include layout="@layout/main_list" />
 
     <LinearLayout
         android:id="@+id/bottom_overlay"
