--- a/res/layout/bookmark_edit_frag.xml
+++ b/res/layout/bookmark_edit_frag.xml
@@ -36,7 +36,7 @@
             android:hint="@string/tags" />
 
         <EditText
-            android:id="@+id/journal_text"
+            android:id="@+id/txt_note"
             style="@style/formMargin"
             android:layout_width="match_parent"
             android:layout_height="0dp"
