--- a/res/layout/contact_edit_frag.xml
+++ b/res/layout/contact_edit_frag.xml
@@ -166,7 +166,7 @@
             android:layout_height="wrap_content"
             android:hint="@string/web_address"
             android:linksClickable="false"
-            />
+            android:inputType="textWebEmailAddress"/>
 
         <EditText
             android:id="@+id/txt_tags"
@@ -177,7 +177,7 @@
             />
 
         <EditText
-            android:id="@+id/journal_text"
+            android:id="@+id/txt_note"
             style="@style/formMargin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
