--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -48,10 +48,11 @@
     </style>
 
     <style name="blockTextTextView">
-        <item name="android:gravity">top</item>
+        <item name="android:gravity">center_vertical</item>
         <item name="android:minHeight">48dp</item>
         <item name="android:padding">@dimen/np_padding_small</item>
         <item name="android:textSize">@dimen/np_textsize_medium</item>
+        <item name="android:textStyle">bold</item>
     </style>
 
     <style name="selectableTextView" parent="@style/listItemTextView">
