--- a/res/layout/include_frame_empty_folder.xml
+++ b/res/layout/include_frame_empty_folder.xml
@@ -14,6 +14,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/empty_folder"
+        android:textColor="#666666"
         android:textSize="@dimen/np_textsize_large"
         android:layout_margin="@dimen/np_padding_small"
         />
