--- a/res/layout/include_frame_empty_folder.xml
+++ b/res/layout/include_frame_empty_folder.xml
@@ -11,6 +11,7 @@
     >
 
     <TextView
+        android:id="@+id/empty_folder_message"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/empty_folder"
