--- a/res/menu/dashboard.xml
+++ b/res/menu/dashboard.xml
@@ -7,9 +7,9 @@
         android:showAsAction="never"
         android:title="@string/logout" />
     <item
-        android:id="@+id/about"
+        android:id="@+id/account"
         android:icon="@android:drawable/ic_menu_info_details"
         android:showAsAction="never"
-        android:title="@string/about" />
+        android:title="@string/account" />
 
 </menu>
