--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -52,7 +52,7 @@
         <item name="android:minHeight">48dp</item>
         <item name="android:padding">@dimen/np_padding_small</item>
         <item name="android:textSize">@dimen/np_textsize_medium</item>
-        <item name="android:textStyle">bold</item>
+        <item name="android:textStyle">normal</item>
     </style>
 
     <style name="selectableTextView" parent="@style/listItemTextView">
